--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://Michael-Mend.github.io/reactportfolio"
+  "homepage": "https://mikemendoza.cc"
 }
